<resources>
    <string name="app_name">SmartPosSdk</string>
    <string name="transation_value_hint">Valor da transação</string>
    <string name="description_hint">Descrição da transação</string>
    <string name="pay_button">Pagar</string>
    <string name="error_empty_fields">Preencha todos os campos</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="number_00">00</string>
    <string name="number_delete">⌫</string>
    <string name="receber_pagamento">Receber pagamento</string>
    <string name="continuar">Continuar</string>
    <string name="creating_preference">Criando preferência...</string>
    <string name="link_generated">Link gerado:</string>
    <string name="error_occurred">Ocorreu um erro:</string>
    <string name="descricao_hint">Descrição da transação</string>
    <string name="valor_default">R$ 0,00</string>
    <string name="criando_preferencia">Criando preferência...</string>
    <string name="erro_campos_vazios">Preencha todos os campos</string>
    <string name="link_gerado">Link gerado: %1$s</string>
    <string name="erro_gerar_link">Erro: %1$s</string>
    <string name="currency_prefix">R$</string>
    <string name="currency_locale">pt-BR</string>
    <string name="generated_link">Link gerado: %1$s</string>
    <string name="error_message_prefix">Erro: </string>
    <string name="splash_screen_title">Receba pagamentos fácil e rápido</string>
    <string name="splash_screen">Splash</string>
    <string name="descricao_padrao">Produto sem descrição</string>
    <string name="erro_valor_invalido">Informe um valor válido</string>
    <string name="copiar_link">Copiar link</string>
    <string name="link_copiado">Link copiado para a área de transferência</string>
</resources>
